plugins/mjpeg/Viewer: Fix Java9+ deprecation for new Double.